<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">odoTRACKER</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_distance">Distance</string>
    <string name="button_distance_distance">Distance</string>
    <string name="button_distance_odometer">Odometer</string>
    <string name="start_odometer_reading">Start Odometer Reading</string>
    <string name="end_odometer_reading">End Odometer Reading</string>
    <string name="distance_travelled">Distance Travelled</string>
    <string name="text_no">No.</string>
    <string name="text_date">Date</string>
    <string name="text_notes">Notes</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="start_file">Start</string>
    <string name="end_file">End</string>
    <string name="distance_file">Distance</string>
    <string name="csv_history_file">OdoTrackerHistory.csv</string>
    <string name="start_odometer_reading_date">Start Odometer Reading Date</string>
    <string name="end_odometer_reading_date">End Odometer Reading Date</string>
    <string name="button_send">Send</string>
    <string name="toast_saved">Saved</string>
    <string name="toast_no_send">Error! No data to send</string>
    <string name="toast_error">Error! No distance travelled</string>
    <string name="language">Language</string>
    <string name="distance_unit">Distance Unit</string>
    <string name="date_format">MM-dd-yyyy</string>
    <string name="message_delete">Are you sure you want to delete log \#</string>
    <string name="title_delete">Confirm Delete Log</string>
    <string name="yes_delete">Yes</string>
    <string name="cancel_delete">Cancel</string>
    
    
    
    
	<string-array name="languages">
	    <item>English</item>
		<item>Vietnamese</item>
	</string-array>
	
	<string-array name="distance_units">
	    <item>Kilometers</item>
		<item>Miles</item>
	</string-array>
		<string name="setting_done">Save</string>
		<string name="Tab_log">Log</string>
		<string name="Tab_Email">Email</string>
		<string name="Tab_Setting">Setting</string>
		<string name="Tab_Distance">Distance</string>
	
</resources>
